force-app/main/default/objects/ssot__PurchaserPlan__dlm/fields/ssot__Affiliation__c.field-meta.xml
<CustomField>
    <fullName>ssot__Affiliation__c</fullName>
    <label>Affiliation</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>Affiliation</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>