force-app/main/default/objects/ssot__PurchaserPlan__dlm/fields/ssot__EffectiveFromDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__EffectiveFromDate__c</fullName>
    <label>Effective From Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EffectiveFromDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>