force-app/main/default/objects/ssot__PurchaserPlan__dlm/fields/ssot__PlanNumberText__c.field-meta.xml
<CustomField>
    <fullName>ssot__PlanNumberText__c</fullName>
    <label>Plan Number</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PlanNumberText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>