force-app/main/default/objects/ssot__PurchaserPlan__dlm/fields/ssot__PlanStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__PlanStatus__c</fullName>
    <label>Plan Status</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PlanStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>